# internal/api/dto/author.go
@@ -7,3 +7,7 @@ type AuthorResponse struct {
 	FirstName string `json:"first_name" example:"John"`
 	LastName  string `json:"last_name" example:"Doe"`
 }
+
+type AuthorFullResponse struct {
+	AuthorResponse
+}
