# internal/api/routers/routers.go
@@ -2,10 +2,13 @@ package routers
 
 import (
 	"github.com/labstack/echo/v4"
-	bookHandler "go_library/internal/api/handler/book"
+	authorHand "go_library/internal/api/handler/author"
+	bookHand "go_library/internal/api/handler/book"
 )
 
-func RegisterRoutes(e *echo.Echo, bookHandler *bookHandler.BookHandler) {
+func RegisterRoutes(e *echo.Echo,
+	bookHandler *bookHand.BookHandler,
+	authorHandler *authorHand.AuthorHandler) {
 	api := e.Group("/api")
 
 	bookGroup := api.Group("/book")
@@ -14,4 +17,7 @@ func RegisterRoutes(e *echo.Echo, bookHandler *bookHandler.BookHandler) {
 	bookGroup.POST("", bookHandler.CreateBook)
 	bookGroup.PATCH("/:id", bookHandler.UpdateBook)
 	bookGroup.DELETE("/:id", bookHandler.DeleteBook)
+
+	authorGroup := api.Group("/author")
+	authorGroup.GET("", authorHandler.GetAllAuthors)
 }
